@@ -2269,19 +2269,16 @@ static void default_tryCatch_finally(void *data) { }
 
 static SEXP trycatch_callback = NULL;
 static const char* trycatch_callback_source =
-    "function(code, conds, fin) {\n"
+    "function(addr, classes, fin) {\n"
     "    handler <- function(cond)\n"
-    "        if (inherits(cond, conds))\n"
-    "            .Internal(C_tryCatchHelper(code, 1L, cond))\n"
-    "        else\n"
-    "            signalCondition(cond)\n"
+    "        .Internal(C_tryCatchHelper(addr, 1L, cond))\n"
+    "    handlers <- rep_len(alist(handler), length(classes))\n"
+    "    names(handlers) <- classes\n"
     "    if (fin)\n"
-    "        tryCatch(.Internal(C_tryCatchHelper(code, 0L)),\n"
-    "                 condition = handler,\n"
-    "                 finally = .Internal(C_tryCatchHelper(code, 2L)))\n"
-    "    else\n"
-    "        tryCatch(.Internal(C_tryCatchHelper(code, 0L)),\n"
-    "                 condition = handler)\n"
+    "	     handlers <- c(handlers,\n"
+    "            alist(finally = .Internal(C_tryCatchHelper(addr, 2L))))\n"
+    "    args <- c(alist(.Internal(C_tryCatchHelper(addr, 0L))), handlers)\n"
+    "    do.call('tryCatch', args)\n"
     "}";
 
 SEXP R_tryCatch(SEXP (*body)(void *), void *bdata,
@@ -2308,7 +2305,7 @@ SEXP R_tryCatch(SEXP (*body)(void *), void *bdata,
     };
 
     /* Interrupts are suspended while in the infrastructure R code and
-       enabled, if the were on entry to R_TryCatch, while calling the
+       enabled, if they were on entry to R_TryCatch, while calling the
        body function in do_tryCatchHelper */
 
     R_interrupts_suspended = TRUE;
